np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-np
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  - Egress
  #ingress: 
  #- from:
  #  - podSelector:
  #      matchLabels:
  #        app: wordpress 
  #  - namespaceSelector:
  #      matchLabels:
  #        app: wordpress
  #egress: 
  #- {}
  #ingress:
  #- {}
